# la-revanche-de-snoopy-ing1-2023-2024-s5-ing1-2023-2024-14-11

./: CMakeLists.txt  README.md  main.c
SnoopyFinal/: main.c
SnoopyFinal/assets/: leaderboard.txt
SnoopyFinal/assets/ASCII/: retry.txt
SnoopyFinal/assets/niveaux/: 1.txt  2.txt
SnoopyFinal/src/keyboard/: keyboard.h
SnoopyFinal/src/menu/: menu.h
SnoopyFinal/src/tools/: tools.c  tools.h
assets/: classement.txt  credits.txt  menu  menu.txt  regles.txt
assets/ASCII/: charger_niveau.txt  defaite  logo  logo.txt  new_game.txt  regles  sauvegarde_titre.txt  victoire  win.txt
assets/niveaux/: 1.txt  2.txt  3.txt  bloc_niveau_1  bloc_niveau_2  bloc_niveau_3
assets/sauvegardes/: sauvegarde_temporaire.txt  test.txt
src/classement/: classement.h
src/demarrage/: demarrage.c  demarrage.h
src/game/: game.c  game.h
src/gameplay/: gameplay.c  gameplay.h
src/keyboard/: keyboard.c
src/mdp/: mdp.c  mdp.h
src/menu/: menu.c  menu.h
src/sauvegarde/: sauvegarde.c  sauvegarde.h
src/timer/: timer.c  timer.h
src/tools/: tools.c  tools.h
